nav bar height corrected on mobile

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -23,6 +23,7 @@
 
     ul{
         margin: 0;
+       
         padding: 0;
         list-style: none;
         font-size: 16px;
@@ -32,6 +33,7 @@
 
         @include mobile{
             font-size: 14px;
+            margin-top: 15%;
         }
 
         .menuIcon{
